# manus-artifacts

./: README.md  State_of_the_Union_Briefing.md  final_manus_artifact_report.md  sandbox_inventory_april_2026.md  synthesis_plan.md
about/: david-sheldon.md
aluminum-os/: ALUMINUM_ARCHITECTURE_DIAGRAM.md  ALUMINUM_COMPLETE_ARTIFACT_INDEX.md  ALUMINUM_CONSTITUTIONAL_CHARTER.md  ALUMINUM_KERNEL_IMPLEMENTATION_SUMMARY.md  ALUMINUM_MULTI_AGENT_UPDATE_FEB_5_2026.md  ALUMINUM_OS_COMPLETE_PACKAGE.md  ALUMINUM_PITCH_DECK.md  ALUMINUM_PROTOCOL_SPECIFICATION.md  ALUMINUM_UNIFIED_OS_WHITE_PAPER.md  ALUMINUM_V2_1_KERNEL_SPECIFICATION.md  CLAUDE_OPUS_4_6_ALUMINUM_INTEGRATION_PLAN.md  CLAUDE_OPUS_4_6_RESEARCH.md  COPILOT_MESSAGE_TO_MANUS.txt  FINAL_DELIVERY_SUMMARY.md  GAMMA_PLUGIN_SPECIFICATION_COPILOT.md  GRAND_SYNTHESIS_MASTER.md  INTEGRATION_REPORT.md  SYNTHESIS_REPORT.md  VENDOR_INTEGRATION_PLANS.md  v2.0-integrated-constitutional-substrate.md  v3.0-unified-field.md  v4.0-socratic-os-integration-report.md  v4.0-unified-field.md
aluminum-os-core/: Cargo.toml  README.md
aluminum-os-core/src/: lib.rs
aluminum-os-core/src/classification/: mod.rs
aluminum-os-core/src/embodiment/: mod.rs
aluminum-os-core/src/governance/: mod.rs
aluminum-os-core/src/routing/: mod.rs
aluminum-os-core/src/telemetry/: mod.rs
aluminum-os-core/tests/: integration_test.rs
bazinga/: v0.1-launch-decree.md
council/: council-session-master-archive.md
council-reviews/: council-review-copilot-output.md  council-review-manus-artifacts.md
docs/: asset-catalogue-march-2026.md  (+3 more)
(+144 files in other folders)
